# siphon

./: .appveyor.yml  .checkignore  .codeclimate.yml  .codecov.yml  .codespellignore  .coveragerc  .gitattributes  .gitignore  .mailmap  .prospector.yaml  .stickler.yml  .travis.yml  AUTHORS.txt  CLA.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.rst  SUPPORT.md  TODO.md  appveyor.yml  conf.py  environment.yml  index.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  versions.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/codeql/: codeql-config.yml
.github/workflows/: assign-milestone.yml  automerge-dependabot.yml  code-analysis.yml  doc-versions.yml  docs-conda.yml  docs.yml  draft-release.yml  linting.yml  nightly-builds.yml  release.yml  tests-conda.yml  tests-pypi.yml  unstable-builds.yml
_templates/: layout.html
ci/: Minimum  Prerelease  deploy_docs.sh  deploy_key.enc  doc_requirements.txt  download_cartopy_maps.py  extra_requirements.txt  filter_links.py  gen_versions_json.py  linting_requirements.txt  requirements.txt  test_requirements.txt
ci-dev/: doc_requirements.txt  linting_requirements.txt  test_requirements.txt
dev/: CONTRIBUTING.html  citing.html  developerguide.html  genindex.html  index.html  installguide.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
dev/_downloads/: Basic_Usage.ipynb  IGRA2_Request.ipynb  NCSS_Cartopy_Example.ipynb  NCSS_Example.py  NCSS_Timeseries_Examples.ipynb  NCSS_Timeseries_Examples.py  Wyoming_Request.ipynb  buoy_met_request.ipynb  buoy_type_request.ipynb  latest_request.ipynb
dev/_modules/: index.html
dev/_sources/: CONTRIBUTING.md.txt  developerguide.rst.txt  index.rst.txt  installguide.rst.txt  sg_execution_times.rst.txt
dev/_static/: documentation_options.js
dev/api/: catalog.html  http_util.html  index.html  metadata.html  ncss.html  ncssdataset.html  radarserver.html  simplewebservice.html
dev/auto_examples/: Basic_Usage.html  Radar_Server_Level_3.html  index.html
dev/examples/: Basic_Usage.html  Radar_Server_Level_3.html  index.html  sg_execution_times.html
docs/: Makefile  conf.py  developerguide.rst  index.rst  installguide.rst  make.bat  requirements.txt
docs/_templates/: footer.html
docs/api/: catalog.rst  index.rst  ncss.rst  simplewebservice.rst
docs/source/: conf.py  developerguide.rst  index.rst  installguide.rst  notebook_gen_sphinxext.py
examples/: Basic_Usage.py  NCSS_Cartopy_Example.py  NCSS_Example.py  NCSS_Timeseries_Examples.py  README.txt  Radar_Server_Level_3.py
examples/acis/: Basic_Overview.py  Mapping_Example.py  readme.txt
examples/ncss/: NCSS_Cartopy_Example.py  NCSS_Example.py  NCSS_Timeseries_Examples.py  README.txt
examples/ndbc/: README.txt  buoy_met_request.py  buoy_type_request.py  latest_request.py
examples/notebooks/: Basic_Usage.ipynb  NCSS_Cartopy_Example.ipynb  NCSS_Example.ipynb  NCSS_Example_Cartopy.ipynb  NCSS_Timeseries_Examples.ipynb  Radar_Server_Level_3.ipynb
examples/upperair/: IGRA2_Request.py  README.txt  Wyoming_Request.py
pudl/: __init__.py
pudl/tds/: TDSCatalog.py  __init__.py  catalog_util.py
pythredds/: __init__.py
pythredds/util/: __init__.py  catalog_util.py
pyudl/: __init__.py
pyudl/adde/: client.py  projection.py
pyudl/tds/: TDSCatalog.py  __init__.py  catalog_util.py
siphon/: __init__.py  _tools.py  _version.py  acis.py  aws_goes.py  catalog.py  http_util.py  metadata.py  ncss.py  ncss_dataset.py  radarserver.py  testing.py  util.py
siphon/cdmr/: __init__.py  cdmremote.py  cdmremotefeature.py  cdmrfeature_pb2.py  coveragedataset.py  dataset.py  ncStream_pb2.py  ncstream.py  xarray_support.py
siphon/simplewebservice/: __init__.py  acis.py  iastate.py  iem.py  igra2.py  mesowest.py  ndbc.py  nhc.py  spc.py  wyoming.py
siphon/tds/: TDSCatalog.py  __init__.py  catalog_util.py
siphon/tests/: test_acis.py  test_catalog.py  test_catalog_access.py  test_http_util.py  test_iastate.py  test_iem.py  test_igra2.py  test_mesowest.py  test_metadata.py  test_ncss.py  test_ncss_dataset.py  test_ndbc.py  test_nhc.py  test_radarsever.py  test_spc.py  test_util.py  test_wyoming.py
src/siphon/: __init__.py  _version.py  catalog.py  http_util.py  metadata.py  ncss.py  ncss_dataset.py  radarserver.py  testing.py
tests/: catalog_util_test.py  test_catalog.py  test_catalog_access.py  test_http_util.py  test_iastate.py  test_igra2.py  test_metadata.py  test_ncss.py  test_ncss_dataset.py  test_ndbc.py  test_radarsever.py  test_wyoming.py
tests/cdmr/: test_cdmremote.py  test_cdmremotefeature.py  test_coveragedataset.py  test_dataset.py  test_xarray.py
v0.10/: CONTRIBUTING.html  citing.html  developerguide.html  genindex.html  index.html  installguide.html  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
v0.11/: CONTRIBUTING.html  citing.html  developerguide.html  genindex.html  index.html  installguide.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
v0.3/: .buildinfo  developerguide.html  genindex.html  index.html  installguide.html  objects.inv  py-modindex.html  search.html  searchindex.js
v0.4/: .buildinfo  developerguide.html  genindex.html  index.html  installguide.html  objects.inv  py-modindex.html  search.html  searchindex.js
v0.5/: .buildinfo  developerguide.html  genindex.html  index.html  installguide.html  objects.inv  py-modindex.html  search.html  searchindex.js
v0.6/: .buildinfo  CONTRIBUTING.html  citing.html  developerguide.html  genindex.html  index.html  installguide.html  objects.inv  py-modindex.html  search.html  searchindex.js
v0.7/: CONTRIBUTING.html  citing.html  developerguide.html  genindex.html  index.html  installguide.html  objects.inv  py-modindex.html  search.html  searchindex.js
v0.8/: CONTRIBUTING.html  citing.html  developerguide.html  genindex.html  index.html  installguide.html  objects.inv  py-modindex.html  search.html  searchindex.js
(+684 files in other folders)
