[flake8]
max-line-length = 95
exclude = siphon/cdmr/ncStream_pb2.py

[metadata]
description-file = README.rst

[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and 3.
universal=1

[versioneer]
VCS = git
style = pep440
versionfile_source = siphon/_version.py
versionfile_build = siphon/_version.py
tag_prefix = v
parentdir_prefix = siphon-

[aliases]
test = pytest
