[flake8]
max-line-length = 95
exclude = siphon/cdmr/ncStream_pb2.py, siphon/cdmr/cdmrfeature_pb2.py, siphon/_version.py
copyright-check = True
copyright-author = University Corporation for Atmospheric Research/Unidata
application-import-names = siphon
import-order-style = google
inline-quotes = single
multiline-quotes = double

[tool:pytest]
norecursedirs = build docs
flake8-ignore = *.py F405
                examples/*.py D T003 T001
                versioneer.py ALL
flake8-max-line-length = 95

[doc8]
ignore-path = docs/build,docs/api
max-line-length = 95

[metadata]
description-file = README.rst

[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and 3.
universal=1

[versioneer]
VCS = git
style = pep440
versionfile_source = siphon/_version.py
versionfile_build = siphon/_version.py
tag_prefix = v
parentdir_prefix = siphon-

[aliases]
test = pytest

[yapf]
based_on_style = pep8
column_limit = 90
