[metadata]
name = siphon
description = A collection of Python utilities for interacting with the Unidata technology stack.
description_file = README.rst
author = Unidata Development Team
author_email = support-python@unidata.ucar.edu
maintainer = Siphon Developers
maintainer_email = support-python@unidata.ucar.edu
license = BSD 3-Clause
license_file = LICENSE
platform = any
keywords = meteorology, weather
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    License :: OSI Approved :: BSD Licens
url = https://github.com/Unidata/siphon
project_urls =
    Documentation = https://unidata.github.io/siphon/
    Release Notes = https://github.com/Unidata/siphon/releases
    Bug Tracker = https://github.com/Unidata/siphon/issues
    Source Code = https://github.com/Unidata/siphon

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    beautifulsoup4>=4.6
    numpy>=1.16
    pandas>=0.25.0
    protobuf>=3.7.0
    requests>=2.21.0
    
[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
    pytest-flake8
    pytest-runner
    netCDF4>=1.1.0
    flake8>3.2.0
    flake8-builtins
    flake8-comprehensions
    flake8-copyright
    flake8-docstrings
    flake8-import-order
    flake8-mutable
    flake8-pep3101
    flake8-print
    flake8-quotes
    flake8-rst-docstrings
    pep8-naming
    vcrpy~=1.5,!=1.7.0,!=1.7.1,!=1.7.2,!=1.7.3
    xarray>=0.10.2
doc =
    sphinx>=1.3,!=1.6.4
    sphinx-gallery
    doc8
    m2r
# SciPy needed for cartopy; we don't use cartopy[plotting] because
# that will pull in GDAL.
examples =
    matplotlib>=1.3
    cartopy>=0.13.1
    scipy
    metpy
netcdf = netCDF4>=1.1.0
dev = ipython[all]>=3.1

[flake8]
max-line-length = 95
application-import-names = siphon
import-order-style = google
copyright-check = True
copyright-author = Siphon Contributors
inline-quotes = single
multiline-quotes = double
rst-roles = class, data, doc, func, meth, mod
rst-directives = plot, versionchanged
docstring-convention = numpy
exclude =
    docs
    build
    src/siphon/cdmr/ncStream_pb2.py
    src/siphon/cdmr/cdmrfeature_pb2.py
select = A B C D E F H I M Q RST S T W B902
ignore = F405 W503 RST902 SIM
per-file-ignores = examples/*.py: D T201
                   tutorials/*.py: D T201

[tool:pytest]
norecursedirs = build docs

[doc8]
ignore-path = docs/build,docs/api
max-line-length = 95

[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and 3.
universal=1

[aliases]
test = pytest

[yapf]
based_on_style = pep8
column_limit = 90
